# devopstrainee

./: Dockerfile  pyproject.toml
app/: __init__.py
app/routers/: health.py
webappchart/: values.yaml
webappchart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
webappchart/templates/tests/: test-connection.yaml
