[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["dotslashsh <vipkkick1276@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.20"
flask = "^3.1.0"
gunicorn = "^23.0.0"
starlette = "^0.41.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
